Moved the JS functions in list_of_references.html to a separate file and made the copy button work in the normal format. Also added a reference key check to the edit_reference() method

--- a/src/templates/list_of_references.html
+++ b/src/templates/list_of_references.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/list_of_references.css') }}">
+    <script src="{{url_for('static', filename='scripts/list_of_references.js')}}"></script>
 </head>
 
 {% extends "layout.html" %}
@@ -23,34 +24,6 @@ List of references | References
     {% endfor %}
 </div>
 <button class="copy-button button" onclick="copyAllReferences('all-references-in-bibtex')">Copy All References</button>
-<script>
-    function copyAllReferences(elementId) {
-        var allReferencesText = document.getElementById(elementId).innerText;
-        navigator.clipboard.writeText(allReferencesText);
-        copyFeedbackMessage("All references copied to clipboard.");
-    }
-
-    function copyFeedbackMessage(message) {
-        const feedback = document.createElement("div");
-        feedback.innerText = message;
-        feedback.style.position = "fixed";
-        feedback.style.bottom = "25px";
-        feedback.style.right = "25px";
-        feedback.style.backgroundColor = "hsl(256 22 13)";
-        feedback.style.color = "white";
-        feedback.style.padding = "8px 10px";
-        feedback.style.borderRadius = "10px";
-        feedback.style.zIndex = "100";
-        feedback.style.transition = "opacity 0.3s";
-
-        document.body.appendChild(feedback);
-
-        setTimeout(() => {
-            feedback.style.opacity = "0";
-            setTimeout(() => feedback.remove(), 300);
-        }, 2000);
-    }
-</script>
 {% endif %}
 <!-- to here -->
 
@@ -65,19 +38,14 @@ List of references | References
         <!-- Copy button code from here -->
     </div>
     <br/>
-    <script>
-        function copyToClipboard(elementId) {
-            var copyText = document.getElementById(elementId).innerText;
-            navigator.clipboard.writeText(copyText);
-            copyFeedbackMessage("Reference copied to clipboard.");
-        }
-    </script>
     <!-- to here -->
         {% else %}
+        <div id="bibtex-{{ i.id }}">
             {{i.title}}, {{i.author}}, {{i.year}}, {{i.publisher}}
+        </div>
         {% endif %}
 
-        <div class=" {{'buttons' if toggle == 'off' else 'buttonsBibtex'}}">
+        <div class="{{'buttons' if toggle == 'off' else 'buttonsBibtex'}}">
             <button class="copy-button button refButton" onclick="copyToClipboard('bibtex-{{ i.id }}')">Copy</button>
             <form action="/edit" method="POST">
                 <input type="hidden" name="id" value="{{i.id}}">
