Add article to database, create constraints for type requirements, update tests and functions to include editor, update tests to use selector correctly

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -25,6 +25,9 @@ Edit Reference | References
     <p>Publisher:<br>
         <input type="text" name="publisher" class="inputfield" value="{{reference.publisher}}" placeholder="Enter publisher name" required>
     </p>
+    <p>Editor:<br>
+        <input type="text" name="editor" class="inputfield" value="{{reference.editor}}" placeholder="Enter editor name" required>
+    </p>
     <p>Reference key:<br>
         <input type="text" class="inputfield" name="reference_key" value="{{reference.reference_key}}" placeholder="Enter reference key" required>
     </p>
