--- a/src/templates/list_of_references.html
+++ b/src/templates/list_of_references.html
@@ -41,7 +41,7 @@ List of references | References
     <!-- to here -->
         {% else %}
         <div id="bibtex-{{ i.id }}">
-            {{i.title}}, {{i.author}}, {{i.year}}, {{i.publisher}}
+            {{i.title}}, {{i.author}}, {{i.year}}, {{i.publisher}}, {{i.editor}}
         </div>
         {% endif %}
 
