--- a/src/templates/new_book_reference.html
+++ b/src/templates/new_book_reference.html
@@ -25,6 +25,9 @@ Add a new book reference | References
     <p>Publisher:<br>
         <input type="text" name="publisher" class="inputfield" placeholder="Enter publisher name" required>
     </p>
+    <p>Editor:<br>
+        <input type="text" name="editor" class="inputfield" placeholder="Enter editor name" required>
+    </p>
     <p>Reference key:<br>
         <input type="text" name="reference_key" class="inputfield" placeholder="Enter reference key" required>
     </p>
