--- a/src/templates/new_book_reference.html
+++ b/src/templates/new_book_reference.html
@@ -29,10 +29,10 @@ Add a new book reference | References
         <input type="text" name="editor" class="inputfield" placeholder="Enter editor name" required>
     </p>
     <p>Reference key:<br>
-        <input type="text" name="reference_key" class="inputfield" placeholder="Enter reference key" required>
+        <input type="text" name="reference_key" class="inputfield" placeholder="Enter a unique reference key" required>
     </p>
     <p>Keyword(s):<br>
-        <textarea rows="4" cols="30" type="text" class="inputfield" name="keywords" placeholder="(Optional) Enter keyword(s), separate keywords by commas (,)"></textarea>
+        <textarea rows="4" cols="30" type="text" class="inputfield" name="keywords" placeholder="(Optional) Enter keyword(s), separate keywords by semicolons (;)"></textarea>
     </p>
     <input type="submit" class="button" value="Submit">
 </form>
