Change the formatting of editors

--- a/src/templates/new_book_reference.html
+++ b/src/templates/new_book_reference.html
@@ -25,8 +25,8 @@ Add a new book reference | References
     <p>Publisher:<br>
         <input type="text" name="publisher" class="inputfield" placeholder="Enter publisher name" required>
     </p>
-    <p>Editor:<br>
-        <input type="text" name="editor" class="inputfield" placeholder="Enter editor name" required>
+    <p>Editor(s):<br>
+        <input type="text" name="editor" class="inputfield" placeholder="Enter editor(s), separate editors by semicolons (;)" required>
     </p>
     <p>Reference key:<br>
         <input type="text" name="reference_key" class="inputfield" placeholder="Enter a unique reference key" required>
