--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -25,8 +25,8 @@ Edit Reference | References
     <p>Publisher:<br>
         <input type="text" name="publisher" class="inputfield" value="{{reference.publisher}}" placeholder="Enter publisher name" required>
     </p>
-    <p>Editor:<br>
-        <input type="text" name="editor" class="inputfield" value="{{reference.editor}}" placeholder="Enter editor name" required>
+    <p>Editor(s):<br>
+        <input type="text" name="editor" class="inputfield" value="{{reference.editor}}" placeholder="Enter editor(s)" required>
     </p>
     <p>Reference key:<br>
         <input type="text" class="inputfield" name="reference_key" value="{{reference.reference_key}}" placeholder="Enter reference key" required>
