--- a/src/templates/selector.html
+++ b/src/templates/selector.html
@@ -16,7 +16,7 @@ Select reference type | References
     <a class="button reftype" href={{url_for("add_book_reference") }}> Book </a>
 </p>
 <p>
-    <a class="button reftype" href={{url_for("add_book_reference") }}> Article </a>
+    <a class="button reftype" href={{url_for("add_article_reference") }}> Article </a>
 </p>
 <p>   
     <a class="button reftype" href={{url_for("add_inbook_reference") }}> Inbook </a>
