--- a/src/static/styles/list_of_references.css
+++ b/src/static/styles/list_of_references.css
@@ -71,6 +71,7 @@ form{
 }
 
 .button{
+    display: inline-block;
     padding: 6px 9px;
     text-decoration: none;
     color: white;
@@ -78,8 +79,8 @@ form{
     border: 1px solid hsl(256 22 95);
     border-radius: 10px;
     transition: transform 0.2s, background-color 0.2s, color 0.2s;
+    font-size: 14px;
 }
-
 
 .button:hover{
     background-color: hsl(256 22 95);
