misc html muutettu

--- a/src/templates/new_misc_reference.html
+++ b/src/templates/new_misc_reference.html
@@ -17,10 +17,10 @@ Add a new miscellaneous reference | References
         <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="(Optional) Enter author(s), separate authors by semicolons (;)"></textarea>
     </p>
     <p>Title:<br>
-        <input type="text" name="title" class="inputfield" placeholder="(Optional) Enter title">
+        <input type="text" name="title" class="inputfield" placeholder="Enter title" required>
     </p>
     <p>How Published:<br>
-        <input type="text" name="how_published" class="inputfield" placeholder="(Optional) Enter how published">
+        <input type="text" name="how_published" class="inputfield" placeholder="Enter how published" required>
     </p>
     <p>Month of Publication:<br>
         <input type="number" name="month" class="inputfield" placeholder="(Optional) Enter publication month">
