--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -13,10 +13,10 @@ Edit Reference | References
 <h2>Edit Reference</h2>
 
 <form action="/edit" method="POST">
+    {% if reference.reference_type == "book" %}
     <p>Author(s):<br>
         <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="Enter author(s), separate authors by semicolons (;)" required>{{authors}}</textarea>
     </p>
-    {% if reference.reference_type == "book" %}
     <p>Title:<br>
         <input type="text" name="title" class="inputfield" value="{{reference.title}}" placeholder="Enter title" required>
     </p>
@@ -30,6 +30,9 @@ Edit Reference | References
         <input type="text" name="editor" class="inputfield" value="{{reference.editor}}" placeholder="Enter editor(s)" required>
     </p>
     {% elif reference.reference_type == "inbook" %}
+    <p>Author(s):<br>
+        <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="Enter author(s), separate authors by semicolons (;)" required>{{authors}}</textarea>
+    </p>
     <p>Title:<br>
         <input type="text" name="title" rows="2" cols="30" class="inputfield" value="{{reference.title}}" placeholder="Enter title of the chapter or section" required>
     </p>
@@ -44,6 +47,28 @@ Edit Reference | References
     </p>
     <p>Editor:<br>
         <textarea name="editors" rows="2" cols="30" class="inputfield" placeholder="(Optional) Enter editor(s), separate editors by semicolons (;)">{{reference.editor}}</textarea>
+    </p>
+    {% if reference.reference_type == "miscellaneous" %}
+    <p>Author(s):<br>
+        <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="(Optional) Enter author(s), separate authors by semicolons (;)"></textarea>
+    </p>
+    <p>Title:<br>
+        <input type="text" name="title" class="inputfield" placeholder="Enter title" required>
+    </p>
+    <p>How Published:<br>
+        <input type="text" name="how_published" class="inputfield" placeholder="Enter how published" required>
+    </p>
+    <p>Month of Publication:<br>
+        <input type="number" name="month" class="inputfield" placeholder="(Optional) Enter publication month">
+    </p>
+    <p>Year of Publication:<br>
+        <input type="number" name="year" class="inputfield" placeholder="(Optional) Enter publication year">
+    </p>
+    <p>Note:<br>
+        <input type="text" name="note" class="inputfield" placeholder="(Optional) Enter note">
+    </p>
+    <p>Annote:<br>
+        <input type="text" name="annote" class="inputfield" placeholder="(Optional) Enter annote">
     </p>
     {% endif %}
     <p>Reference key:<br>
