--- a/src/templates/selector.html
+++ b/src/templates/selector.html
@@ -22,7 +22,7 @@ Select reference type | References
     <a class="button reftype" href={{url_for("add_inbook_reference") }}> Inbook </a>
 </p>
 <p>
-    <a class="button reftype" href={{url_for("add_book_reference") }}> Miscellaneous </a>
+    <a class="button reftype" href={{url_for("add_misc_reference") }}> Miscellaneous </a>
 </p>
 
 <a class="button frontpage" href="/">Go to front page</a>
