--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -56,7 +56,7 @@ Edit Reference | References
         <input type="text" name="title" class="inputfield" placeholder="Enter title" required>
     </p>
     <p>How Published:<br>
-        <input type="text" name="how_published" class="inputfield" placeholder="Enter how published" required>
+        <input type="text" name="howpublished" class="inputfield" placeholder="Enter how published" required>
     </p>
     <p>Month of Publication:<br>
         <input type="number" name="month" class="inputfield" placeholder="(Optional) Enter publication month">
@@ -66,9 +66,6 @@ Edit Reference | References
     </p>
     <p>Note:<br>
         <input type="text" name="note" class="inputfield" placeholder="(Optional) Enter note">
-    </p>
-    <p>Annote:<br>
-        <input type="text" name="annote" class="inputfield" placeholder="(Optional) Enter annote">
     </p>
     {% endif %}
     <p>Reference key:<br>
