--- a/src/templates/new_misc_reference.html
+++ b/src/templates/new_misc_reference.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/new_misc_reference.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/new_book_reference.css') }}">
 </head>
 
 {% extends "layout.html" %}
@@ -20,7 +20,7 @@ Add a new miscellaneous reference | References
         <input type="text" name="title" class="inputfield" placeholder="Enter title" required>
     </p>
     <p>How Published:<br>
-        <input type="text" name="how_published" class="inputfield" placeholder="Enter how published" required>
+        <input type="text" name="howpublished" class="inputfield" placeholder="Enter how published" required>
     </p>
     <p>Month of Publication:<br>
         <input type="number" name="month" class="inputfield" placeholder="(Optional) Enter publication month">
@@ -30,9 +30,6 @@ Add a new miscellaneous reference | References
     </p>
     <p>Note:<br>
         <input type="text" name="note" class="inputfield" placeholder="(Optional) Enter note">
-    </p>
-    <p>Annote:<br>
-        <input type="text" name="annote" class="inputfield" placeholder="(Optional) Enter annote">
     </p>
     <p>Reference key:<br>
         <input type="text" name="reference_key" class="inputfield" placeholder="Enter a unique reference key" required>
