changes to misc ref

--- a/src/templates/new_misc_reference.html
+++ b/src/templates/new_misc_reference.html
@@ -32,7 +32,7 @@ Add a new miscellaneous reference | References
         <input type="text" name="note" class="inputfield" placeholder="(Optional) Enter note">
     </p>
     <p>Reference key:<br>
-        <input type="text" name="reference_key" class="inputfield" placeholder="Enter a unique reference key" required>
+        <input type="text" name="reference_key" class="inputfield" pattern="[a-zA-Z0-9\-_:]+" placeholder="Enter a unique reference key" required>
     </p>
     <p>Keyword(s):<br>
         <textarea rows="4" cols="30" type="text" class="inputfield" name="keywords" placeholder="(Optional) Enter keyword(s), separate keywords by semicolons (;)"></textarea>
