--- a/src/templates/new_misc_reference.html
+++ b/src/templates/new_misc_reference.html
@@ -23,10 +23,10 @@ Add a new miscellaneous reference | References
         <input type="text" name="howpublished" class="inputfield" placeholder="Enter how published" required>
     </p>
     <p>Month of Publication:<br>
-        <input type="number" name="month" class="inputfield" placeholder="(Optional) Enter publication month">
+        <input type="text" name="month" class="inputfield" placeholder="(Optional) Enter publication month">
     </p>
     <p>Year of Publication:<br>
-        <input type="number" name="year" class="inputfield" placeholder="(Optional) Enter publication year">
+        <input type="text" name="year" class="inputfield" placeholder="(Optional) Enter publication year">
     </p>
     <p>Note:<br>
         <input type="text" name="note" class="inputfield" placeholder="(Optional) Enter note">
