Added the article reference type to edit.html and fixed author & editor formatting

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -14,59 +14,87 @@ Edit Reference | References
 
 <form action="/edit" method="POST">
     {% if reference.reference_type == "book" %}
-    <p>Author(s):<br>
-        <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="Enter author(s), separate authors by semicolons (;)" required>{{authors}}</textarea>
-    </p>
-    <p>Title:<br>
-        <input type="text" name="title" class="inputfield" value="{{reference.title}}" placeholder="Enter title" required>
-    </p>
-    <p>Year of Publication:<br>
-        <input type="number" name="year" class="inputfield" value="{{reference.year}}" placeholder="Enter publication year" required>
-    </p>
-    <p>Publisher:<br>
-        <input type="text" name="publisher" class="inputfield" value="{{reference.publisher}}" placeholder="Enter publisher name" required>
-    </p>
-    <p>Editor(s):<br>
-        <input type="text" name="editor" class="inputfield" value="{{reference.editor}}" placeholder="Enter editor(s)" required>
-    </p>
+        <p>Author(s):<br>
+            <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="Enter author(s), separate authors by semicolons (;)" required>{{authors}}</textarea>
+        </p>
+        <p>Title:<br>
+            <input type="text" name="title" class="inputfield" value="{{reference.title}}" placeholder="Enter title" required>
+        </p>
+        <p>Year of Publication:<br>
+            <input type="number" name="year" class="inputfield" value="{{reference.year}}" placeholder="Enter publication year" required>
+        </p>
+        <p>Publisher:<br>
+            <input type="text" name="publisher" class="inputfield" value="{{reference.publisher}}" placeholder="Enter publisher name" required>
+        </p>
+        <p>Editor(s):<br>
+            <input type="text" name="editor" class="inputfield" value="{{editors}}" placeholder="Enter editor(s)" required>
+        </p>
     {% elif reference.reference_type == "inbook" %}
-    <p>Author(s):<br>
-        <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="Enter author(s), separate authors by semicolons (;)" required>{{authors}}</textarea>
-    </p>
-    <p>Title:<br>
-        <input type="text" name="title" rows="2" cols="30" class="inputfield" value="{{reference.title}}" placeholder="Enter title of the chapter or section" required>
-    </p>
-    <p>Book title:<br>
-        <input type="text" name="booktitle" rows="2" cols="30" class="inputfield" value="{{reference.booktitle}}" placeholder="Enter book title" required>
-    </p>
-    <p>Year of Publication:<br>
-        <input type="number" name="year" class="inputfield" value="{{reference.year}}" placeholder="Enter publication year" required>
-    </p>
-    <p>Publisher:<br>
-        <input type="text" name="publisher" class="inputfield" value="{{reference.publisher}}" placeholder="Enter publisher name" required>
-    </p>
-    <p>Editor:<br>
-        <textarea name="editors" rows="2" cols="30" class="inputfield" placeholder="(Optional) Enter editor(s), separate editors by semicolons (;)">{{reference.editor}}</textarea>
-    </p>
+        <p>Author(s):<br>
+            <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="Enter author(s), separate authors by semicolons (;)" required>{{authors}}</textarea>
+        </p>
+        <p>Title:<br>
+            <input type="text" name="title" rows="2" cols="30" class="inputfield" value="{{reference.title}}" placeholder="Enter title of the chapter or section" required>
+        </p>
+        <p>Book title:<br>
+            <input type="text" name="booktitle" rows="2" cols="30" class="inputfield" value="{{reference.booktitle}}" placeholder="Enter book title" required>
+        </p>
+        <p>Year of Publication:<br>
+            <input type="number" name="year" class="inputfield" value="{{reference.year}}" placeholder="Enter publication year" required>
+        </p>
+        <p>Publisher:<br>
+            <input type="text" name="publisher" class="inputfield" value="{{reference.publisher}}" placeholder="Enter publisher name" required>
+        </p>
+        <p>Editor:<br>
+            <textarea name="editors" rows="2" cols="30" class="inputfield" placeholder="(Optional) Enter editor(s), separate editors by semicolons (;)">{{editors}}</textarea>
+        </p>
     {% elif reference.reference_type == "misc" %}
-    <p>Author(s):<br>
-        <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="(Optional) Enter author(s), separate authors by semicolons (;)"></textarea>
-    </p>
-    <p>Title:<br>
-        <input type="text" name="title" class="inputfield" placeholder="Enter title" required>
-    </p>
-    <p>How Published:<br>
-        <input type="text" name="howpublished" class="inputfield" placeholder="Enter how published" required>
-    </p>
-    <p>Month of Publication:<br>
-        <input type="text" name="month" class="inputfield" placeholder="(Optional) Enter publication month">
-    </p>
-    <p>Year of Publication:<br>
-        <input type="text" name="year" class="inputfield" placeholder="(Optional) Enter publication year">
-    </p>
-    <p>Note:<br>
-        <input type="text" name="note" class="inputfield" placeholder="(Optional) Enter note">
-    </p>
+        <p>Author(s):<br>
+            <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="(Optional) Enter author(s), separate authors by semicolons (;)">{{authors}}</textarea>
+        </p>
+        <p>Title:<br>
+            <input type="text" name="title" rows="2" cols="30" class="inputfield" value="{{reference.title}}" placeholder="Enter title of the chapter or section" required>
+        </p>
+        <p>How Published:<br>
+            <input type="text" name="howpublished" class="inputfield" value="{{reference.howpublished}}" placeholder="Enter how published" required>
+        </p>
+        <p>Month of Publication:<br>
+            <input type="text" name="month" class="inputfield" value="{{reference.month}}" placeholder="(Optional) Enter publication month">
+        </p>
+        <p>Year of Publication:<br>
+            <input type="text" name="year" class="inputfield" value="{{reference.year}}" placeholder="(Optional) Enter publication year">
+        </p>
+        <p>Note:<br>
+            <input type="text" name="note" class="inputfield" value="{{reference.note}}" placeholder="(Optional) Enter note">
+        </p>
+    {% elif reference.reference_type == "article" %}
+        <p>Author(s):<br>
+            <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="Enter author(s), separate authors by semicolons (;)" required>{{authors}}</textarea>
+        </p>
+        <p>Title:<br>
+            <input type="text" name="title" rows="2" cols="30" class="inputfield" value="{{reference.title}}" placeholder="Enter title of the chapter or section" required>
+        </p>
+        <p>Journal:<br>
+            <input type="text" name="journal" rows="2" cols="30" class="inputfield" value="{{reference.journal}}" placeholder="Enter the name of the journal" required>
+        </p>
+        <p>Year of Publication:<br>
+            <input type="number" name="year" class="inputfield" value="{{reference.year}}" placeholder="Enter publication year" required>
+        </p>
+        <p>Volume:<br>
+            <input type="number" name="volume" class="inputfield" value="{{reference.volume}}" placeholder="(Optional) Enter the volume number of the journal"></textarea>
+        </p>
+        <p>Number:<br>
+            <input type="number" name="number" class="inputfield" value="{{reference.number}}" placeholder="(Optional) Enter the issue number of the journal">
+        </p>
+        <p>Pages:<br>
+            <input type="text" name="pages" rows="2" cols="30" class="inputfield" value="{{reference.page}}" placeholder="(Optional) Enter the page numbers on which the article appears.">
+        </p>
+        <p>Month:<br>
+            <input type="text" name="month" rows="2" cols="30" class="inputfield" value="{{reference.month}}" placeholder="(Optional) Enter the month of publication.">
+        </p>
+        <p>Note:<br>
+            <textarea name="note" rows="5" cols="30" class="inputfield" placeholder="Miscellaneous information">{{reference.note}}</textarea>
+        </p>
     {% endif %}
     <p>Reference key:<br>
         <input type="text" class="inputfield" name="reference_key" value="{{reference.reference_key}}" placeholder="Enter reference key" required>
