--- a/src/static/styles/edit.css
+++ b/src/static/styles/edit.css
@@ -104,6 +104,22 @@ a:active{
     background-color: hsl(0 100 55);
 }
 
+.warning{
+    color: white;
+    border: 1px solid hsl(256 22 95);
+}
+
+.warning:hover{
+    background-color: hsl(256 22 95);
+    color: black;
+}
+
+.warning:active{
+    background-color: hsl(256 22 90);
+    color: black;
+}
+
+
 .buttons {
     display: flex;
     position: relative;
