--- a/src/templates/new_misc_reference.html
+++ b/src/templates/new_misc_reference.html
@@ -15,7 +15,7 @@ Add a new miscellaneous reference | References
 
 <form action="/add_misc_reference" method="POST">
     <p>Author(s):<br>
-        <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="(Optional) Enter author(s), separate authors by semicolons (;)"></textarea>
+        <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="(Optional) Enter author(s), separate authors by semicolons (;)" required></textarea>
     </p>
     <p>Title:<br>
         <input type="text" name="title" class="inputfield" placeholder="Enter title" required>
